--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "string-search": "^1.2.0",
+    "uuid": "^3.3.2",
     "xmldoc": "^1.1.0"
   },
   "devDependencies": {
