Add another function that store stats in DynamoDB
- Add processStats function that reads stats from S3, stores them in DynamoDB and finally removes the stats from S3.
- processStats is fired every time when a new file is created in S3.
- Data is stored in two DynamoDB tables: current and history:
  - Current table contains latest stats.
  - History table contains one row per instance per day.
- TODO: REST/json API for accessing the data.

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,10 @@
 service: x-road-simple-stats-collector
 custom:
   s3bucket: <S3_BUCKET>
+  dynamoTableCurrent: statsCurrentTable
+  dynamoTableHistory: statsHistoryTable
+plugins:
+  - serverless-plugin-existing-s3
 provider:
   name: aws
   region: eu-central-1
@@ -10,10 +14,12 @@ provider:
   environment:
     S3_BUCKET: ${self:custom.s3bucket}
     RANDOM_RESULTS_FILE: true
+    DYNAMO_TABLE_CURRENT: ${self:custom.dynamoTableCurrent}
+    DYNAMO_TABLE_HISTORY: ${self:custom.dynamoTableHistory}
 functions:
   collectAndStoreStats:
     name: collectAndStoreStats
-    handler: handler.collectAndStore
+    handler: handler.collectAndStoreStats
     role: CollectAndStoreStatsRole
     events:
     - schedule:
@@ -23,6 +29,17 @@ functions:
         input:
           url: "<URL>"
         enabled: true
+  processStats:
+    name: processStats
+    handler: handler.processStats
+    role: ProcessStatsRole
+    events:
+      - existingS3:
+          bucket: ${self:custom.s3bucket}
+          events:
+            - s3:ObjectCreated:*
+          rules:
+            - suffix: .json
 package:
   individually: true
   include:
@@ -37,6 +54,36 @@ resources:
       Type: AWS::S3::Bucket
       Properties:
         BucketName: ${self:custom.s3bucket}
+    StatsCurrentTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:custom.dynamoTableCurrent}
+        AttributeDefinitions:
+          - AttributeName: instanceIdentifier
+            AttributeType: S
+        KeySchema:
+          - AttributeName: instanceIdentifier
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+    StatsHistoryTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:custom.dynamoTableHistory}
+        AttributeDefinitions:
+          - AttributeName: instanceIdentifier
+            AttributeType: S
+          - AttributeName: date
+            AttributeType: S
+        KeySchema:
+          - AttributeName: instanceIdentifier
+            KeyType: HASH
+          - AttributeName: date
+            KeyType: RANGE
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
     CollectAndStoreStatsRole:
       Type: AWS::IAM::Role
       Properties:
@@ -73,3 +120,63 @@ resources:
                     - s3:PutObjectAcl
                   Resource:
                     - 'arn:aws:s3:::${self:custom.s3bucket}/*'
+    ProcessStatsRole:
+      Type: AWS::IAM::Role
+      Properties:
+        RoleName: ProcessStatsRole
+        AssumeRolePolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Principal:
+                Service:
+                  - lambda.amazonaws.com
+              Action: sts:AssumeRole
+        Policies:
+          - PolicyName: ProcessStatsRolePolicy
+            PolicyDocument:
+              Version: '2012-10-17'
+              Statement:
+                - Effect: Allow
+                  Action:
+                    - logs:CreateLogGroup
+                    - logs:CreateLogStream
+                    - logs:PutLogEvents
+                  Resource:
+                    - 'Fn::Join':
+                      - ':'
+                      -
+                        - 'arn:aws:logs'
+                        - Ref: 'AWS::Region'
+                        - Ref: 'AWS::AccountId'
+                        - 'log-group:/aws/lambda/*:*:*'
+                - Effect: Allow
+                  Action:
+                    - s3:GetObject
+                    - s3:DeleteObject
+                  Resource:
+                    - 'arn:aws:s3:::${self:custom.s3bucket}/*'
+                - Effect: Allow
+                  Action:
+                    - s3:PutBucketNotification
+                  Resource:
+                    - 'arn:aws:s3:::${self:custom.s3bucket}'
+                - Effect: Allow
+                  Action:
+                    - dynamodb:PutItem
+                    - dynamodb:UpdateItem
+                  Resource:
+                    - 'Fn::Join':
+                      - ':'
+                      -
+                        - 'arn:aws:dynamodb'
+                        - Ref: 'AWS::Region'
+                        - Ref: 'AWS::AccountId'
+                        - 'table/${self:custom.dynamoTableCurrent}'
+                    - 'Fn::Join':
+                      - ':'
+                      -
+                        - 'arn:aws:dynamodb'
+                        - Ref: 'AWS::Region'
+                        - Ref: 'AWS::AccountId'
+                        - 'table/${self:custom.dynamoTableHistory}'
