--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "aws-sdk": "^2.377.0",
     "axios": "^0.18.0",
+    "serverless-plugin-existing-s3": "^2.3.0",
     "string-search": "^1.2.0",
     "uuid": "^3.3.2",
     "xmldoc": "^1.1.0"
