--- a/serverless.yml
+++ b/serverless.yml
@@ -27,7 +27,7 @@ functions:
         #rate: cron(*/2 * * * ? *)
         rate: cron(0 23 * * ? *)
         input:
-          url: "<URL>"
+          url: <URL>
         enabled: true
   processStats:
     name: processStats
@@ -40,6 +40,30 @@ functions:
             - s3:ObjectCreated:*
           rules:
             - suffix: .json
+  listInstanceIdentifiers:
+    name: listInstanceIdentifiers
+    handler: handler.listInstanceIdentifiers
+    role: StatsAPIRole
+    events:
+      - http:
+          path: v1/instances
+          method: get
+          private: false
+          cors: true
+  getStatsByInstanceIdentifier:
+    name: getStatsByInstanceIdentifier
+    handler: handler.getStatsByInstanceIdentifier
+    role: StatsAPIRole
+    events:
+      - http:
+          path: v1/instances/{instanceIdentifier}
+          method: get
+          private: false
+          cors: true
+          request:
+            parameters:
+              paths:
+                instanceIdentifier: true
 package:
   individually: true
   include:
@@ -165,6 +189,56 @@ resources:
                   Action:
                     - dynamodb:PutItem
                     - dynamodb:UpdateItem
+                  Resource:
+                    - 'Fn::Join':
+                      - ':'
+                      -
+                        - 'arn:aws:dynamodb'
+                        - Ref: 'AWS::Region'
+                        - Ref: 'AWS::AccountId'
+                        - 'table/${self:custom.dynamoTableCurrent}'
+                    - 'Fn::Join':
+                      - ':'
+                      -
+                        - 'arn:aws:dynamodb'
+                        - Ref: 'AWS::Region'
+                        - Ref: 'AWS::AccountId'
+                        - 'table/${self:custom.dynamoTableHistory}'
+    StatsAPIRole:
+      Type: AWS::IAM::Role
+      Properties:
+        RoleName: StatsAPIRole
+        AssumeRolePolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Principal:
+                Service:
+                  - lambda.amazonaws.com
+              Action: sts:AssumeRole
+        Policies:
+          - PolicyName: StatsAPIRolePolicy
+            PolicyDocument:
+              Version: '2012-10-17'
+              Statement:
+                - Effect: Allow
+                  Action:
+                    - logs:CreateLogGroup
+                    - logs:CreateLogStream
+                    - logs:PutLogEvents
+                  Resource:
+                    - 'Fn::Join':
+                      - ':'
+                      -
+                        - 'arn:aws:logs'
+                        - Ref: 'AWS::Region'
+                        - Ref: 'AWS::AccountId'
+                        - 'log-group:/aws/lambda/*:*:*'
+                - Effect: Allow
+                  Action:
+                    - dynamodb:GetItem
+                    - dynamodb:Query
+                    - dynamodb:Scan
                   Resource:
                     - 'Fn::Join':
                       - ':'
