--- a/serverless.yml
+++ b/serverless.yml
@@ -9,7 +9,7 @@ provider:
   name: aws
   region: eu-central-1
   stage: prod
-  runtime: nodejs8.10
+  runtime: nodejs10.x
   versionFunctions: false
 functions:
   collectAndStoreStats:
